stateDiagram-v2
    direction LR

    [*] --> setup: POST /api/sessions {goal, file_ids, grounding_mode}

    setup --> probe: POST /probe (optional diagnostic)
    setup --> plan: POST /plan (probe skipped)

    probe --> probe: POST /quiz/{qid}/answer — incorrect/idk, retry if allowed
    probe --> plan: POST /plan — after all 3 questions answered

    plan --> plan: "reorder | skip | expand | regenerate | select"
    plan --> teach: POST /plan/approve — first pending node becomes current
    plan --> teach: POST /plan/select — manual node pick

    teach --> teach: POST /advance — next pending node
    teach --> final_quiz: POST /advance — no pending nodes left (run_final_quiz)

    final_quiz --> complete: quiz graded — mastery reached
    final_quiz --> remediate: quiz graded — gaps remain

    remediate --> remediate: "hint | reveal | chat /turns"
    remediate --> final_quiz: POST /continue — re-teach missed points, fresh quiz round

    setup --> complete: POST /complete (manual, history kept)
    probe --> complete: POST /complete (manual)
    plan --> complete: POST /complete (manual)
    teach --> complete: POST /complete (manual)
    final_quiz --> complete: POST /complete (manual)
    remediate --> complete: POST /complete (manual)

    complete --> [*]
